RI-44 bugfix: navbar is hidden behint the main section on iOS

--- a/src/components/planets/planets.css
+++ b/src/components/planets/planets.css
@@ -80,6 +80,10 @@ h4 {
   }
 }
 
+#planet-wrapper {
+  padding-top: 2rem;
+}
+
 .border-radius {
   border-radius: 10px;
 }
